<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="themoviedb_url">http://api.themoviedb.org</string>
    <string name="sort_popularity">popularity.desc</string>
    <string name="sort_rating">vote_average.desc</string>
    <string name="sort_favorites">Favorites</string>
    <string name="poster_url">http://image.tmdb.org/t/p/w500/</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="search_by">Search by</string>
    <string name="share_trailer">Share Trailer</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="favorite_button">Favorite</string>
    <string name="unfavorite_button">Unfavorite</string>
    <string name="poster_description">movie poster image</string>
    <string name="shared_poster_image">sharedPosterImage</string>
    <string name="no_movies">Movie Information Not Available</string>
    <string name="no_favorites">No favorited movies found</string>
    <string name="failed_retrofit">Failed to get movie information</string>
    <string name="provider_authority">com.example.andy.popularmovies.movieprovider</string>
    <string name="video_header">Videos:</string>
    <string name="review_header">Reviews:</string>
</resources>
