<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/search_by"
        android:title="@string/search_by">
        <menu>
            <item
                android:id="@+id/popularity"
                android:title="@string/popularity" />
            <item
                android:id="@+id/rating"
                android:title="@string/rating" />
            <item
                android:id="@+id/favorites"
                android:title="@string/sort_favorites" />
        </menu>
    </item>
</menu>
